# pysecs

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  theory.html
.github/workflows/: build-wheels.yml  ci-tests.yml  doc-publish.yml  doc-tests.yml  release.yml
_downloads/3c9e76fb67b8505190ac0e23aa716da0/: plot_robust_kalman.py
_downloads/48f7d3b38bf2f8003dc1eb826509af4e/: plot_robust_kalman.ipynb
_downloads/58af592125053f48c6d376f66fddd5ca/: plot_internal_external.ipynb
_downloads/795f6e9935a44924eefdb5ef0b9b700e/: plot_B_curl_free.ipynb
_downloads/92386a34cc22fa19ed2f85f4c93a3f75/: plot_B_curl_free.py
_downloads/b7b00d8a1e947b7836eccd8152a2805e/: plot_epsilon_selection.py
_downloads/c7020e8dcc7dddfc8e105f6b138ae935/: plot_animation.ipynb
_downloads/ca016c45b700bc8bb79238a26ae65f3a/: plot_J_surface.ipynb
_downloads/cc2b1805c30acc61253f6ca8dcb2ecd1/: plot_B_divergence_free.ipynb
_downloads/d5a09583c2626db2f8c1222f3fd0dcd6/: plot_J_surface.py
_downloads/e0bd9db4bdf4c045fb0f58b4f453a9d7/: plot_auto_grid.ipynb
_downloads/e7acb8815d0382479c3ef4a50dbc8b58/: plot_internal_external.py
_downloads/f5516714ff714daeca9b5d0f35901196/: plot_epsilon_selection.ipynb
_sources/: index.rst.txt  sg_execution_times.rst.txt  theory.rst.txt
_sources/development/: index.rst.txt
_sources/examples/: index.rst.txt  plot_B_curl_free.rst.txt  plot_B_divergence_free.rst.txt  (+6 more)
_static/: documentation_options.js
benchmarks/: bench_secs.py
development/: index.html
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  pysecs.rst  usage.rst
examples/: README.txt  fit_and_predict.py  index.html  plot_B_curl_free.html  plot_B_divergence_free.html  plot_B_divergence_free.py  plot_J_surface.html  plot_J_surface.py  plot_animation.py  plot_auto_grid.html  plot_auto_grid.py  plot_epsilon_selection.html  plot_internal_external.html  plot_robust_kalman.html  sg_execution_times.html
notebooks/: Example1.ipynb
pySECS/: __init__.py  secs.py
pysecs/: __init__.py  grids.py  kalman.py  secs.py
reference/: index.html
tests/: test_grids.py  test_kalman.py  test_physics.py  test_secs.py
(+5 files in other folders)
